update synonym maps

--- a/scripts/synonym_map_create.ipynb
+++ b/scripts/synonym_map_create.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "service_name = \"cog-search-jd5ypzfx2l6vi\"\n",
-    "api_version = \"2023-11-01\"\n",
-    "admin_key = \"omleyzSnaE1LguzkKUSTruoaCNTTIZKqwgrlCRYH1WAzSeCdPdhE\"\n",
-    "language = \"sv\"\n",
-    "index_name=\"001-version-test\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -39,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +57,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# agresso_synonym_map={\n",
+    "#     \"name\": \"agresso-synonyms-equivalency\",\n",
+    "#     \"format\": \"solr\",\n",
+    "#     \"synonyms\":\n",
+    "#         \"marksaas, agresso\\n\"\n",
+    "#         \"henke, barnrättsombud\\n\"\n",
+    "# }\n",
+    "\n",
+    "# agresso_synonym_map={\n",
+    "#     \"name\": \"agresso-synonyms-explicit\",\n",
+    "#     \"format\": \"solr\",\n",
+    "#     \"synonyms\":\n",
+    "#         \"marksaas, agresso => agresso\\n\"\n",
+    "#         \"henke, barnrättsombud => barnrättsombud\\n\"\n",
+    "# }\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,9 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "201\n",
+      "{\"@odata.context\":\"https://cog-search-jd5ypzfx2l6vi.search.windows.net/$metadata#synonymmaps/$entity\",\"@odata.etag\":\"\\\"0x8DC03B4C95D7A11\\\"\",\"name\":\"agresso-synonyms-equivalency\",\"format\":\"solr\",\"synonyms\":\"Marksaas, marksaas, Levop, levop, Agresso, agresso\\nHenke, henke, Miro, miro, Barnr\\u00e4ttsombud, barnr\\u00e4ttsombud\\n\",\"encryptionKey\":null}\n"
+     ]
+    }
+   ],
    "source": [
     "url = f\"https://{service_name}.search.windows.net/synonymmaps?api-version={api_version}\"\n",
     "\n",
@@ -173,9 +199,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "{'@odata.etag': '\"0x8DC03B3F0755477\"', 'name': 'agresso-synonyms-equivalency', 'format': 'solr', 'synonyms': 'marksaas, agresso\\nhenke, barnrättsombud\\n', 'encryptionKey': None}\n",
+      "{'@odata.etag': '\"0x8DC03B40C821E53\"', 'name': 'agresso-synonyms-explicit', 'format': 'solr', 'synonyms': 'marksaas, agresso => agresso\\nhenke, barnrättsombud => barnrättsombud\\n', 'encryptionKey': None}\n"
+     ]
+    }
+   ],
    "source": [
     "url = f\"https://{service_name}.search.windows.net/synonymmaps?api-version={api_version}\"\n",
     "headers = {\n",
@@ -227,9 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "204\n"
+     ]
+    }
+   ],
    "source": [
     "synonymmap_name=\"agresso-synonyms-equivalency\"\n",
     "\n",
@@ -243,6 +287,13 @@
     "\n",
     "print(response.status_code)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
