--- a/scripts/synonym_map_test.ipynb
+++ b/scripts/synonym_map_test.ipynb
@@ -45,10 +45,6 @@
     "load_dotenv()\n",
     "\n",
     "# Connect to your Azure Cognitive Search service\n",
-    "endpoint = \"https://cog-search-jd5ypzfx2l6vi.search.windows.net\"\n",
-    "key = \"omleyzSnaE1LguzkKUSTruoaCNTTIZKqwgrlCRYH1WAzSeCdPdhE\"\n",
-    "index_name1 = \"001-version-test\"\n",
-    "index_name2 = \"001-version-test-2\"\n",
     "\n",
     "credential = AzureKeyCredential(key)\n",
     "client = SearchIndexClient(endpoint, credential)\n",
@@ -65,22 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agresso_synonym_map={\n",
-    "    \"name\": \"agresso-synonyms-equivalency\",\n",
-    "    \"format\": \"solr\",\n",
-    "    \"synonyms\":\n",
-    "        \"Marksaas, marksaas, Levop, levop, Agresso, agresso\\n\"\n",
-    "        \"Henke, henke, Miro, miro, Barnrättsombud, barnrättsombud\\n\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -100,30 +81,38 @@
       "\n",
       "############################################################################################################\n",
       "Results from query: levop\n",
-      "title: Fakturahantering\n",
-      "Score: 6.8481174\n",
+      "title: BÖRJA ANVÄNDA AGRESSO WEBORDER\n",
+      "Score: 17.811005\n",
+      "\n",
+      "title: Help!\n",
+      "Score: 14.492219\n",
       "\n",
       "title: BÖRJA ANVÄNDA AGRESSO WEBORDER\n",
-      "Score: 6.491845\n",
-      "\n",
-      "title: Fakturahantering\n",
-      "Score: 5.9892416\n",
+      "Score: 12.62093\n",
       "\n",
       "############################################################################################################\n",
       "Results from query: marksaas\n",
-      "title: Fakturahantering\n",
-      "Score: 6.8481174\n",
+      "title: BÖRJA ANVÄNDA AGRESSO WEBORDER\n",
+      "Score: 17.811005\n",
+      "\n",
+      "title: Help!\n",
+      "Score: 14.492219\n",
       "\n",
       "title: BÖRJA ANVÄNDA AGRESSO WEBORDER\n",
-      "Score: 6.491845\n",
-      "\n",
-      "title: Fakturahantering\n",
-      "Score: 5.9892416\n",
+      "Score: 12.62093\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "agresso_synonym_map={\n",
+    "    \"name\": \"agresso-synonyms-equivalency\",\n",
+    "    \"format\": \"solr\",\n",
+    "    \"synonyms\":\n",
+    "        \"Marksaas, marksaas, Levop, levop, Agresso, agresso\\n\"\n",
+    "        \"Henke, henke, Miro, miro, Barnrättsombud, barnrättsombud\\n\"\n",
+    "}\n",
+    "\n",
     "print(\"############################################################################################################\")\n",
     "query1 = \"Vad används agresso till?\"\n",
     "query1 = \"agresso\"\n",
@@ -196,23 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# **Explicit mapping**\n",
-    "agresso_synonym_map={\n",
-    "    \"name\": \"agresso-synonyms-explicit\",\n",
-    "    \"format\": \"solr\",\n",
-    "    \"synonyms\":\n",
-    "        \"Marksaas, marksaas, Levop, levop, Agresso, agresso => agresso\\n\"\n",
-    "        \"Henke, henke, Miro, miro, Barnrättsombud, barnrättsombud => barnrättsombud\\n\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -232,31 +205,40 @@
       "\n",
       "############################################################################################################\n",
       "Results from query: levop\n",
-      "title: Fakturahantering\n",
-      "Score: 7.0252504\n",
+      "title: BÖRJA ANVÄNDA AGRESSO WEBORDER\n",
+      "Score: 18.362925\n",
       "\n",
       "title: Help!\n",
-      "Score: 6.8372707\n",
+      "Score: 16.198048\n",
       "\n",
       "title: BÖRJA ANVÄNDA AGRESSO WEBORDER\n",
-      "Score: 6.1504164\n",
+      "Score: 14.24573\n",
       "\n",
       "############################################################################################################\n",
       "Results from query: marksaas\n",
-      "title: Fakturahantering\n",
-      "Score: 7.0252504\n",
+      "title: BÖRJA ANVÄNDA AGRESSO WEBORDER\n",
+      "Score: 18.362925\n",
       "\n",
       "title: Help!\n",
-      "Score: 6.8372707\n",
+      "Score: 16.198048\n",
       "\n",
       "title: BÖRJA ANVÄNDA AGRESSO WEBORDER\n",
-      "Score: 6.1504164\n",
+      "Score: 14.24573\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Hybrid Search\n",
+    "# **Explicit mapping**\n",
+    "agresso_synonym_map={\n",
+    "    \"name\": \"agresso-synonyms-explicit\",\n",
+    "    \"format\": \"solr\",\n",
+    "    \"synonyms\":\n",
+    "        \"Marksaas, marksaas, Levop, levop, Agresso, agresso => agresso\\n\"\n",
+    "        \"Henke, henke, Miro, miro, Barnrättsombud, barnrättsombud => barnrättsombud\\n\"\n",
+    "}\n",
+    "\n",
+    "print(\"############################################################################################################\")\n",
     "query1 = \"Vad används agresso till?\"\n",
     "query1 = \"agresso\"\n",
     "  \n",
@@ -271,7 +253,6 @@
     "    top=3\n",
     ")  \n",
     "\n",
-    "print(\"############################################################################################################\")\n",
     "print(f\"Results from query: {query1}\")  \n",
     "for result1 in results1:\n",
     "    title = result1['title'].split('\\n')[0]\n",
@@ -280,6 +261,7 @@
     "    print(f\"Score: {result1['@search.score']}\")\n",
     "    print()\n",
     "\n",
+    "print(\"############################################################################################################\")\n",
     "query2 = \"Vad används levop till?\"\n",
     "query2 = \"levop\"\n",
     "  \n",
@@ -292,9 +274,8 @@
     "    select=[\"title\", \"content\"],\n",
     "    query_type=QueryType.SIMPLE, #QueryType.SEMANTIC, semantic_configuration_name='default', query_caption=QueryCaptionType.EXTRACTIVE, query_answer=QueryAnswerType.EXTRACTIVE,\n",
     "    top=3\n",
-    ")  \n",
+    ")\n",
     "\n",
-    "print(\"############################################################################################################\")\n",
     "print(f\"Results from query: {query2}\")\n",
     "for result2 in results2:\n",
     "    title = result2['title'].split('\\n')[0]\n",
@@ -303,7 +284,7 @@
     "    print(f\"Score: {result2['@search.score']}\")\n",
     "    print()\n",
     "\n",
-    "# Hybrid Search\n",
+    "print(\"############################################################################################################\")\n",
     "query3 = \"Vad används Marksaas till?\"\n",
     "query3=\"marksaas\"\n",
     "  \n",
@@ -317,7 +298,7 @@
     "    query_type=QueryType.SIMPLE, #QueryType.SEMANTIC, semantic_configuration_name='default', query_caption=QueryCaptionType.EXTRACTIVE, query_answer=QueryAnswerType.EXTRACTIVE,\n",
     "    top=3\n",
     ")  \n",
-    "print(\"############################################################################################################\")\n",
+    "\n",
     "print(f\"Results from query: {query3}\")\n",
     "for result3 in results3:\n",
     "    title = result3['title'].split('\\n')[0]\n",
